Added Car Validation Attributes

--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -48,17 +48,17 @@
 
   <div>
     <%= form.label :insider_car_image, style: "display: block" %>
-    <%= form.text_field :insider_car_image %>
+    <%= form.file_field :insider_car_image %>
   </div>
 
   <div>
     <%= form.label :front_car_image, style: "display: block" %>
-    <%= form.text_field :front_car_image %>
+    <%= form.file_field :front_car_image %>
   </div>
 
   <div>
     <%= form.label :profil_car_image, style: "display: block" %>
-    <%= form.text_field :profil_car_image %>
+    <%= form.file_field :profil_car_image %>
   </div>
 
   <div>
