--- a/app/views/cars/_car.html.erb
+++ b/app/views/cars/_car.html.erb
@@ -3,7 +3,7 @@
     <strong>Insider car image:</strong>
     <%= car.insider_car_image %>
   </p>
-
+  
   <p>
     <strong>Front car image:</strong>
     <%= car.front_car_image %>
@@ -13,6 +13,11 @@
     <strong>Profil car image:</strong>
     <%= car.profil_car_image %>
   </p>
+
+  <p>
+    Added <%= time_tag car.created_at, "data-local": "time-ago" %>
+  </p>
+
   <p>
     <strong>Marque:</strong>
     <%= car.marque %>
