Added Discussion's features

--- a/app/views/cars/_car.html.erb
+++ b/app/views/cars/_car.html.erb
@@ -49,6 +49,11 @@
   </p>
 
   <p>
+    <strong><%= pluralize car.discussions.count, "discussion" %></strong>
+    
+  </p>
+
+  <p>
     <strong>Description:</strong>
     <%= car.description %>
   </p>
