Added ACtion Mailer

--- a/app/views/discussions/_new.html.erb
+++ b/app/views/discussions/_new.html.erb
@@ -1,5 +1,5 @@
 <%= form_with model: [ car, Discussion.new ] do |form| %>
-    Our discussion: <br>
+    Let's talk: <br>
     <%= form.text_area :content, size: "20x5" %>
-    <% form.submit %>
+    <%= form.submit %>
 <% end %>
